# tomb

./: Cargo.toml  README.md  build.rs  deny.toml
.github/: settings.yml
.github/workflows/: advisories.yml  audits.yml  ci.yml  rust.yml
src/: error.rs  lib.rs  main.rs
src/_operations/: add.rs  compression.rs  restore.rs
src/api/: client.rs  error.rs  mod.rs
src/api/models/: drive.rs  drive_access.rs  metadata.rs  mod.rs  snapshot.rs  user_key.rs
src/api/requests/core/blocks/: locate.rs
src/api/requests/core/buckets/: create.rs  read.rs
src/api/requests/core/buckets/metadata/: push.rs
src/api/requests/core/buckets/snapshots/: create.rs  read.rs
src/api/requests/staging/: pull_blocks.rs
src/api/requests/staging/upload/: content.rs  push.rs
src/blockstore/: carv2_memory.rs  memory.rs  mod.rs
src/car/: error.rs
src/car/v1/: block.rs  header.rs  mod.rs
src/car/v2/: fixture.rs  header.rs  mod.rs
src/car/v2/index/: indexable.rs  indexsorted.rs  mod.rs
src/cli/: args.rs  display.rs  helpers.rs  mod.rs  runnable_command.rs  utils.rs  verbosity.rs
src/cli/commands/: access.rs  account.rs  api.rs  drive_access.rs  drives.rs  keys.rs  metadata.rs  mod.rs  platform.rs  runnable_command.rs
src/cli/commands/drives/: access.rs  helpers.rs  mod.rs  operations.rs
src/cli/display/: drives.rs  keys.rs  mod.rs  persistence.rs
src/cli/specifiers/: access.rs  drive.rs  mod.rs
src/config/: globalconfig.rs  keys.rs  mod.rs
src/datastore/: api.rs  carv2_disk.rs  carv2_memory.rs  disk.rs  error.rs  mod.rs  multi_carv2_disk.rs
src/drive/: apidiskdrive.rs  bfs.rs  datastore.rs  diskdrive.rs  loaded.rs  mod.rs  omni.rs  prepare.rs  restore.rs  store.rs  synctracker.rs  tracker.rs
src/drive/local/: bfs.rs  loaded.rs  mod.rs  store.rs  sync.rs  tracker.rs
src/drive/operations/: mod.rs  prepare.rs  restore.rs
src/drive/sync/: bfs.rs  loaded.rs  mod.rs  store.rs  tracker.rs
src/file_scanning/: fclones_logger.rs  grouper.rs  spider.rs  spider_plans.rs
src/filesystem/: metadata.rs  serialize.rs  wnfsio.rs
src/filesystem/sharing/: mapper.rs  mod.rs
src/native/: error.rs  mod.rs
src/native/configuration/: globalconfig.rs  keys.rs  xdg.rs
src/native/operations/: add.rs  compression.rs  configure.rs  mod.rs  prepare.rs  remove.rs  restore.rs
src/native/sync/: local.rs  mod.rs  omni.rs
src/on_disk/: error.rs  ext.rs  mod.rs  xdg.rs
src/on_disk/config/: drive.rs  global.rs  helpers.rs  mod.rs
src/on_disk/local_share/: client.rs  drive.rs  globalconfig.rs  keys.rs  mod.rs
src/operations/: add.rs  compression.rs  mod.rs  prepare.rs  remove.rs
src/sync/: local.rs
src/utils/: error.rs  io.rs  mod.rs
src/utils/testing/: blockstores.rs
