[package]
name = "banyan-cli"
license = "MIT"
description = "Banyan manages data and security for use with Filecoin"
homepage = "https://banyan.computer"
repository = "https://github.com/banyancomputer/tomb"
version = "1.1.1"
readme = "README.md"
edition = "2021"

# Cargo publication optionals
categories = ["compression", "cryptography", "encoding", "filesystem"]
keywords = ["decentralization", "filecoin", "ipfs", "storage"]

# Dependencies that must exist independent of architecture
[dependencies]
tracing-appender = "^0.2"
base58 = { version = "^0.2" }
bytesize = { version = "^1.3" }
clap = { version = "^4", features = ["derive"] }
dir-assert = { git = "https://github.com/banyancomputer/dir-assert.git", branch = "non-utf8", version = "^0.2" }
fclones = { version = "^0.34" }
fs_extra = { version = "^1" }
hex = { version = "^0.4" }
indicatif = { version = "^0.17" }
jwalk = { version = "^0.8" }
log = { version = "^0.4" }
open = { version = "^5" }
sha1 = { version = "^0.10" }
sha2 = { version = "^0.10" }
tokio = { version = "^1", features = ["full", "io-util", "fs"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = [
	"env-filter",
	"fmt",
	"time",
	"json",
] }
base64 = { version = "^0.21" }
async-recursion = { version = "^1" }
async-trait = { version = "^0.1" }
blake3 = { version = "^1" }
bytes = { version = "^1.5" }
chrono = { version = "^0.4", default-features = false, features = [
	"clock",
	"std",
] }
colored = { version = "^2" }
futures = { version = "^0.3" }
futures-core = { version = "^0.3" }
futures-util = { version = "^0.3" }
lz4_flex = { version = "^0.11" }
mime_guess = { version = "^2" }
rand = { version = "^0.8" }
reqwest = { version = "^0.11", features = [
	"blocking",
	"multipart",
	"json",
	"stream",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["std"] }
thiserror = { version = "^1" }
unsigned-varint = { version = "^0.8" }
url = { version = "^2", features = ["serde"] }
uuid = { version = "^1", features = ["serde", "v4"] }
banyanfs = { path = "../banyanfs/", features = ["banyan-api"] }
object_store = "0.9.1"
tokio-util = "0.7.10"
#banyan-object-store = { path = "../banyan-core/crates/banyan-object-store/" }

[dev-dependencies]
fake-file = { version = "^0.1" }
serial_test = { version = "^2" }

# Native features
[features]
cli = []
integration-tests = []

[[bin]]
name = "banyan"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
