[package]
name = "banyan-cli"
license = "MIT"
description = "Banyan manages data and security for use with Filecoin"
homepage = "https://banyan.computer"
repository = "https://github.com/banyancomputer/tomb"
version = "1.1.1"
readme = "README.md"
edition = "2021"

# Cargo publication optionals
categories = ["compression", "cryptography", "encoding", "filesystem"]
keywords = ["decentralization", "filecoin", "ipfs", "storage"]

# Dependencies that must exist independent of architecture
[dependencies]
# BanyanFS
banyanfs = { path = "../banyanfs/", features = ["banyan-api"] }

# Tracing
tracing = { version = "^0.1" }
tracing-appender = { version = "^0.2" }
tracing-subscriber = { version = "^0.3", features = [
	"env-filter",
	"fmt",
	"time",
	"json",
] }

# CLI Output
bytesize = { version = "^1.3" }
colored = { version = "^2" }

# CLI Argument Capture
clap = { version = "^4", features = ["derive"] }

# Filesystem Traversal
walkdir = { version = "2" }

# Async
tokio = { version = "^1", features = ["full", "io-util", "fs"] }
tokio-util = { version = "^0.7" }
async-recursion = { version = "^1" }
async-trait = { version = "^0.1" }

# Url Parsing
url = { version = "^2", features = ["serde"] }
# Random
rand = { version = "^0.8" }
# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["std"] }
# UUID
uuid = { version = "^1", features = ["serde", "v4"] }
# Local Object Storage
object_store = { version = "^0.9" }
cli-table = "0.4.7"

#futures = { version = "^0.3" }
#futures-core = { version = "^0.3" }
#bytes = { version = "^1.5" }
#chrono = { version = "^0.4", default-features = false, features = [
#"clock",
#"std",
#] }


[dev-dependencies]
dir-assert = { git = "https://github.com/banyancomputer/dir-assert.git", branch = "non-utf8", version = "^0.2" }
fake-file = { version = "^0.1" }
serial_test = { version = "^2" }

[[bin]]
name = "banyan"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
